--- a/res/layout/essay_overview.xml
+++ b/res/layout/essay_overview.xml
@@ -8,14 +8,12 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="category" />
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111"/>
+        android:layout_height="wrap_content"/>
     
     <View android:layout_width="match_parent"
         android:layout_height="1dip"
