--- a/res/layout/essay_overview.xml
+++ b/res/layout/essay_overview.xml
@@ -1,27 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"/>
-
-    <TextView
-        android:id="@+id/content"
+    <LinearLayout 
+        android:id="@+id/category_type_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/brief_edit_paddingleft"
-		android:paddingRight="@dimen/brief_edit_paddingright"
-		android:paddingBottom="@dimen/brief_edit_paddingbottom"
-		android:paddingTop="@dimen/brief_edit_paddingtop"
-		android:textColor="#FF000000"/>
-    
-    <View android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="#FFFFFFFF"/>
+        android:orientation="horizontal">
+        <TextView 
+            android:id="@+id/title_type_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-</LinearLayout>
+        <CheckBox
+            android:id="@+id/check_type_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/category_type_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/title_type_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/content_type_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/brief_edit_paddingbottom"
+            android:paddingLeft="@dimen/brief_edit_paddingleft"
+            android:paddingRight="@dimen/brief_edit_paddingright"
+            android:paddingTop="@dimen/brief_edit_paddingtop"
+            android:textColor="#FF000000" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:background="#FFFFFFFF" />
+    </LinearLayout>
+    
+    <LinearLayout 
+        android:id="@+id/category_type_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView 
+            android:id="@+id/title_type_3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
+</FrameLayout>
