--- a/res/layout/essay_overview.xml
+++ b/res/layout/essay_overview.xml
@@ -3,100 +3,142 @@
     xmlns:dash="http://schemas.android.com/apk/res/com.diary.goal.setting"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
-
-    <RelativeLayout 
+    android:background="#FFDDFDDB" >
+    <!--  
+      _________________________________________
+      |                |                       |
+      |    TextView    |      CheckBox         |
+      |________________|_______________________|
+      
+    -->
+    <RelativeLayout
         android:id="@+id/category_type_1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FF00FF4D">
-        <com.diary.goal.setting.view.DashLineView 
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <com.diary.goal.setting.view.DashLineView
             android:id="@+id/line_h_type_1"
-            dash:orientation="0"/>
-        <TextView 
-            android:id="@+id/title_type_1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            dash:orientation="0" />
+
+        <LinearLayout
+            android:id="@+id/frame_type_1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/line_h_type_1"
-            android:layout_centerVertical="true"
-            android:singleLine="true"/>
+            android:orientation="horizontal" >
 
-        <CheckBox
-            android:id="@+id/check_type_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:layout_toRightOf="@id/title_type_1"
-            android:layout_alignTop="@id/title_type_1"/>
-        
-        <com.diary.goal.setting.view.DashLineView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_alignTop="@id/check_type_1"
-            android:layout_alignBottom="@id/check_type_1"
-            android:layout_toLeftOf="@id/check_type_1"
-            android:background="@drawable/vertical_dash_line"
-            dash:orientation="1"/>
+            <TextView
+                android:id="@+id/title_type_1"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingBottom="@dimen/brief_edit_paddingbottom"
+                android:paddingLeft="@dimen/brief_edit_paddingleft"
+                android:paddingRight="@dimen/brief_edit_paddingright"
+                android:paddingTop="@dimen/brief_edit_paddingtop"
+                android:singleLine="true"
+                android:textColor="#FF704214"
+                android:textSize="16sp" />
 
+            <com.diary.goal.setting.view.DashLineView
+                android:layout_width="3dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                dash:orientation="1" />
+
+            <CheckBox
+                android:id="@+id/check_type_1"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="2" />
+        </LinearLayout>
     </RelativeLayout>
+    <!--  
+      _________________________________________
+      |                |                       |
+      |    TextView    |      TextView         |
+      |________________|_______________________|
+      
+    -->
     <RelativeLayout
         android:id="@+id/category_type_2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:background="#FF00FF4D">
-        <com.diary.goal.setting.view.DashLineView 
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:background="@drawable/horizontal_dash_line"
+        android:layout_height="wrap_content" >
+
+        <com.diary.goal.setting.view.DashLineView
             android:id="@+id/line_h_type_2"
-            dash:orientation="0"/>
-        <TextView
-            android:id="@+id/title_type_2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            dash:orientation="0" />
+
+        <LinearLayout
+            android:id="@+id/frame_type_2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/line_h_type_2"
-            android:layout_centerVertical="true"
-            android:textSize="16sp" />
+            android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/content_type_2"
+            <TextView
+                android:id="@+id/title_type_2"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingBottom="@dimen/brief_edit_paddingbottom"
+                android:paddingLeft="@dimen/brief_edit_paddingleft"
+                android:paddingRight="@dimen/brief_edit_paddingright"
+                android:paddingTop="@dimen/brief_edit_paddingtop"
+                android:textColor="#FF704214"
+                android:textSize="16sp" />
+
+            <com.diary.goal.setting.view.DashLineView
+                android:layout_width="3dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                dash:orientation="1" />
+
+            <TextView
+                android:id="@+id/content_type_2"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:paddingBottom="@dimen/brief_edit_paddingbottom"
+                android:paddingLeft="@dimen/brief_edit_paddingleft"
+                android:paddingRight="@dimen/brief_edit_paddingright"
+                android:paddingTop="@dimen/brief_edit_paddingtop"
+                android:textColor="#FF000000" />
+        </LinearLayout>
+    </RelativeLayout>
+    <!--  
+      _________________________________________
+      |                                       |
+      |              TextView                 |
+      |_______________________________________|
+      
+    -->
+    <RelativeLayout
+        android:id="@+id/category_type_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <com.diary.goal.setting.view.DashLineView
+            android:id="@+id/line_h_type_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            dash:orientation="0" />
+
+        <TextView
+            android:id="@+id/title_type_3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/line_h_type_3"
             android:paddingBottom="@dimen/brief_edit_paddingbottom"
             android:paddingLeft="@dimen/brief_edit_paddingleft"
             android:paddingRight="@dimen/brief_edit_paddingright"
             android:paddingTop="@dimen/brief_edit_paddingtop"
-            android:layout_toRightOf="@id/title_type_2"
-            android:layout_below="@id/line_h_type_2"
-            android:textColor="#FF000000" />
-
-        <com.diary.goal.setting.view.DashLineView 
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_alignTop="@id/content_type_2"
-            android:layout_alignBottom="@id/content_type_2"
-            android:layout_toLeftOf="@id/content_type_2"
-            android:background="@drawable/vertical_dash_line"
-            dash:orientation="1"/>
-    </RelativeLayout>
-    
-    <RelativeLayout 
-        android:id="@+id/category_type_3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FF00FF4D">
-        <com.diary.goal.setting.view.DashLineView 
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:id="@+id/line_h_type_3"
-            dash:orientation="0"/>
-        <TextView 
-            android:id="@+id/title_type_3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/line_h_type_3"/>
-
+            android:textColor="#FF704214"
+            android:textSize="16sp" />
     </RelativeLayout>
 
 </FrameLayout>
