--- a/res/layout/essay_overview_item.xml
+++ b/res/layout/essay_overview_item.xml
@@ -48,12 +48,14 @@
                 android:layout_weight="0"
                 dash:orientation="1" />
             
-            <RatingBar android:id="@+id/star_type_0"
-                android:layout_width="0dip"
+            <LinearLayout android:layout_width="0dip"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:stepSize="0.5"
-                android:numStars="5"/>
+                android:layout_weight="2">
+                
+                <com.diary.goal.setting.view.PentagramView android:id="@+id/star_type_0"
+                android:layout_width="50dip"
+                android:layout_height="50dip"/>
+            </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
     <!--  
