--- a/res/layout/nine_panel_frame.xml
+++ b/res/layout/nine_panel_frame.xml
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/panel_7"
         android:layout_toRightOf="@id/panel_8"/>
-    
+    <!--
     <View android:layout_width="1dip"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/panel_1"
@@ -95,6 +95,6 @@
         android:layout_alignLeft="@id/panel_1"
         android:layout_alignRight="@id/panel_3"
         android:layout_below="@id/panel_4"
-        android:background="#FF7F7F7F"/>
+        android:background="#FF7F7F7F"/>  -->
 
 </com.diary.goal.setting.view.NinePanelLayout>
