--- a/res/values/abs__themes.xml
+++ b/res/values/abs__themes.xml
@@ -158,6 +158,10 @@
         <item name="windowActionModeOverlay">false</item>
         <item name="windowContentOverlay">@null</item>
     </style>
+    <style name="Theme.Sherlock.Light.Notitle" parent="Theme.Sherlock.Light">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
     <style name="Theme.Sherlock.Light.DarkActionBar" parent="Sherlock.__Theme.DarkActionBar">
         <item name="windowContentOverlay">@drawable/abs__ab_solid_shadow_holo</item>
         <item name="actionBarStyle">@style/Widget.Sherlock.Light.ActionBar.Solid.Inverse</item>
