--- a/CalanderSquare/res/layout/month.xml
+++ b/CalanderSquare/res/layout/month.xml
@@ -10,8 +10,8 @@
       android:id="@+id/title"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/calendar_month_topmargin"
-      android:layout_marginBottom="@dimen/calendar_month_title_bottommargin"
+      android:paddingTop="@dimen/calendar_month_title_bottompadding"
+      android:paddingBottom="@dimen/calendar_month_title_toppadding"
       android:gravity="center_horizontal"
       style="@style/CalendarTitle"
       />
