--- a/CalanderSquare/res/values/colors.xml
+++ b/CalanderSquare/res/values/colors.xml
@@ -9,5 +9,7 @@
   <color name="calendar_text_inactive">#40778088</color>
   <color name="calendar_text_active">#ff778088</color>
   <color name="calendar_text_selected">#ffffffff</color>
+  <color name="calendar_title_bg">#ff4c4c4c</color>
+  <color name="calendar_text_title">#ffD0D0D0</color>
   <color name="calendar_text_unselectable">#7f778088</color>
 </resources>
